--- a/team2_Project/WebContent/resources/css/w4t-admin.css
+++ b/team2_Project/WebContent/resources/css/w4t-admin.css
@@ -11041,3 +11041,7 @@ body.sidebar-toggled footer.sticky-footer {
 select[name=orderStatus]{
   width: 170px;
 }
+
+#locationBox input{
+  width: 300px
+}
